--- a/views/ccpp_sale_target_view.xml
+++ b/views/ccpp_sale_target_view.xml
@@ -12,7 +12,7 @@
         <field name="name">ccpp.sale.target.view.tree</field>
         <field name="model">ccpp.sale.target</field>
         <field name="arch" type="xml">
-            <tree sample="1" multi_edit="1" editable="top">
+            <tree sample="1" multi_edit="1" editable="top" class="sale_target_tree">
                 <!--<field name="years" interval="year" options="{'datepicker': {'format': 'yyyy'}, 'hide_month': True,'date_format': '%Y/%m/%d'}" />-->
                 <field name="year_selection"/>
                 <field name="period"/>
