--- a/views/res_partner_view.xml
+++ b/views/res_partner_view.xml
@@ -24,18 +24,17 @@
             <xpath expr="//form[1]/sheet[1]/div[2]/div[1]" position="after">
                 <div class="o_row">
                     <div>
-                        <field name="is_customer" style="width:35%"/>
-                        <label class="o_label" for="is_customer" string="Customer" style="width:65%"/>
+                        <field name="is_customer"/>
+                        <label class="o_label" for="is_customer" string="Customer"/>
                     </div>
                     <div>
-                        <field name="is_vendor" style="width:35%"/>
-                        <label class="o_label" for="is_vendor" string="Vendor" style="width:65%"/>
+                        <field name="is_vendor"/>
+                        <label class="o_label" for="is_vendor" string="Vendor"/>
                     </div>
                     <div>
-                        <field name="is_competitor" style="width:35%"/>
-                        <label class="o_label" for="is_competitor" string="Competitor" style="width:65%"/>
+                        <field name="is_competitor"/>
+                        <label class="o_label" for="is_competitor" string="Competitor"/>
                     </div>
-                    <div></div>
                     <div></div>
                     <div></div>
                 </div>
