--- a/views/rocker_timesheet_views.xml
+++ b/views/rocker_timesheet_views.xml
@@ -15,7 +15,12 @@
                      <separator/>
                     <searchpanel view_types="tree,calendar">
                         <field name="task_search" expand="1" hierarchize="1" string="Projects/Tasks" icon="fa-folder-open"/>
+                        <field name="project_id" expand="1" hierarchize="1" string="Project" icon="fa-folder-open"/>
                     </searchpanel>
+                    <group expand="0" string="Group By">
+                        <filter string="Sales Person" name="groupby_sales_person" context="{'group_by': 'employee_id'}"/>
+                        <filter string="Month" name="groupby_month" context="{'group_by': 'start'}"/>
+                    </group>
                 </search>
             </field>
         </record>
@@ -24,21 +29,23 @@
             <field name="name">rocker_timesheet_tree</field>
             <field name="model">account.analytic.line</field>
             <field name="arch" type="xml">
-                <tree js_class="rocker_tree" string="Timesheets" editable="top" create="true" delete="true" edit="true">
-                    <field name="project_id" required="1" options="{'no_create_edit': True}"
-                           domain="[('company_id', '=', company_id)]"/>
-                    <field name="task_id" required="1" options="{'no_create_edit': True}"
-                           domain="[('project_id', '=', project_id)]"/>
-                    <field name="name" string="Comments" />
+                <!--<tree js_class="rocker_tree" string="Timesheets" editable="top" create="true" delete="true" edit="true">-->
+                <tree js_class="rocker_tree" string="Timesheets" create="true" delete="true" edit="true">
+                    <field name="name" string="Task" />
+                    <field name="customer_id" domain="[('is_customer','=',True)]" string="Customer"/>
+                    <field name="project_id" string="CCPP"/>
+                    <field name="task_id" string="Solution"/>
+                    <field name="task_strategy_id" string="Strategy"/>    
+                    
                     <field name="display_name" readonly="1" invisible="1"/>
                     <field name="date" required="1" readonly="1" invisible="1" />
-                    <field name="unit_amount" widget="float_time" type="measure"/>
-                    <field name="start" required="1"/>
-                    <field name="stop" required="1"/>
-                    <field name="duration" required="1" widget="float_time" type="measure" />
+                    <field name="unit_amount" widget="float_time" type="measure" invisible="1"/>
+                    <field name="start" required="1" string="From"/>
+                    <field name="stop" required="1" string="To"/>
+                    <field name="duration" required="1" widget="float_time" type="measure" invisible="1"/>
                     <field name="employee_id" readonly="1" optional="show" />
-                    <field name="department_id" readonly="1" optional="show" />
-                    <field name="company_id" required="1" readonly="1" optional="show"/>
+                    <field name="department_id" readonly="1" optional="hide" invisible="1"/>
+                    <field name="company_id" required="1" readonly="1" optional="hide" invisible="1"/>
                     <field name="user_id"  invisible="1" required="1" readonly="1"/>
                     <field name="allday" invisible="1" />
                 </tree>
@@ -110,7 +117,7 @@
             <field name="model">account.analytic.line</field>
             <field name="priority" eval="3"/>
             <field name="arch" type="xml">
-                <form string="Timesheet">
+                <form string="Tasks">
                     <sheet>
                         <div class="oe_title">
                             <div class="oe_edit_only">
@@ -126,9 +133,10 @@
                             <page name="page_details" string="Details">
                                 <group>
                                     <group>
+                                        <field name="customer_id" string="Customer"/>
                                         <field name="start" string="From" invisible="0" readonly="0" required="1" />
                                         <field name="stop" string="To" invisible="0" readonly="0" required="1" />
-                                        <label for="daystocreateshow" string="Generate" attrs="{'invisible':[('daystocreateshow','&lt;',2)]}"/>
+                                        <!--<label for="daystocreateshow" string="Generate" attrs="{'invisible':[('daystocreateshow','&lt;',2)]}"/>
                                         <div attrs="{'invisible':[('daystocreateshow','&lt;',2)]}">
                                             <field name="daystocreateshow"  string=" more Timesheet rows for next days" class="oe_inline"  readonly="1"/>
                                             <span> more timesheet rows for next coming days</span>
@@ -139,18 +147,20 @@
                                             <span attrs="{'invisible':[('daystocreateshow','!=',0)]}"> hours</span>
                                             <span attrs="{'invisible':[('daystocreateshow','=',0)]}"> hours per day</span>
                                         </div>
-                                        <field name="allday" invisible="1"/>
+                                        <field name="allday" invisible="1"/>-->
                                     </group>
                                     <group>
-                                        <field name="project_id" required="1" domain="[('company_id', '=', company_id)]"/>
-                                        <field name="task_id" required="1"
-                                               domain="[('project_id', '=', project_id)]"/>
-                                        <label for="unit_amount"  string="Actual Work" invisible="0"/>
+                                        <field name="project_id" required="0" domain="[('company_id', '=', company_id)]" string="CCPP"/>
+                                        <field name="task_id" required="0"
+                                                domain="[('project_id', '=', project_id), ('is_solution', '=', True)]" string="Solution"/>
+                                        <field name="task_strategy_id"
+                                                domain="[('project_id', '=', project_id), ('parent_id', '=', task_id), ('is_strategy', '=', True)]" string="Strategy"/>
+                                        <!--<label for="unit_amount"  string="Actual Work" invisible="0"/>
                                         <div>
                                             <field name="unit_amount" invisible="0" required="1" widget="float_time" class="oe_inline" readonly="0"/>
                                             <span> hours</span>
                                         </div>
-                                        <field name="date" invisible="1" required="1"/>
+                                        <field name="date" invisible="1" required="1"/>-->
                                     </group>
                                 </group>
                             </page>
@@ -169,15 +179,17 @@
                           form_view_id="%(ccpp.rocker_timesheet_form)d"
                           date_start="start" date_stop="stop" date_delay="duration"
                           all_day="allday" color="rocker_type"
-                          mode="month"
+                          mode="week"
                           quick_add="false"
                           event_open_popup="true"
                           show_unusual_days="true"
                           hide_time="false">
                     <field name="display_name"/>
-                    <field name="project_id" required="1"/>
-                    <field name="task_id" required="1"/>
-                    <field name="unit_amount" required="1"/>
+                    <field name="customer_id"/>
+                    <field name="project_id" required="1" string="CCPP"/>
+                    <field name="task_id" required="1" string="Solution"/>
+                    <field name="task_strategy_id" required="1" string="Strategy"/>
+                    <field name="unit_amount" required="1" invisible="1"/>
                     <field name="rocker_type" filters="1" invisible="1"/>
 <!--                    <field name="company_id" required="1" readonly="1" optional="show" groups="base.group_multi_company"/>-->
                     <field name="company_id" required="1" readonly="1"/>
@@ -279,12 +291,13 @@
         -->
 
         <record id="act_rocker_timesheet_tree" model="ir.actions.act_window">
-            <field name="name">Timesheets</field>
+            <field name="name">Tasks</field>
             <field name="res_model">account.analytic.line</field>
             <field name="domain">[('user_id', '=', uid)]</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,form</field>
             <field name="view_id" ref="rocker_timesheet_tree"/>
             <field name="search_view_id" ref="rocker_timesheet_search"/>
+            <field name="context">{'search_default_groupby_sales_person': 1, 'search_default_groupby_month': 1}</field>
             <field name="target">main</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -336,6 +349,7 @@
             <field name="view_mode">calendar,tree,form</field>
             <field name="view_id" ref="rocker_timesheet_calendar"/>
             <field name="search_view_id" ref="rocker_timesheet_search"/>
+
             <field name="target">main</field>
             <field name="domain">[('user_id', '=', uid)]</field>
             <field name="context"></field>
@@ -502,6 +516,5 @@
                   action="act_rocker_project"
                   sequence="1"
                   groups="hr_timesheet.group_timesheet_manager"/>
-
     </data>
 </odoo>
