--- a/static/src/scss/tree_width.scss
+++ b/static/src/scss/tree_width.scss
@@ -15,6 +15,10 @@
   width: 190px !important;
   max-width: 200px !important;
 }
+.customer_information_tree [data-name="year_text"] {
+  width: 50px !important;
+  max-width: 50px !important;
+}
 .customer_information_tree [data-name="actual_sale_ranking"] {
   width: 220px !important;
   max-width: 220px !important;
@@ -27,3 +31,4 @@
   width: 200px !important;
   max-width: 200px !important;
 }
+
